demos/01-service-level_SD-WAN_policies/yaml/0-net-debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-debug-nonhost
spec:
  selector:
    matchLabels:
      app: net-debug-nonhost
  replicas: 1
  template:
    metadata:
      labels:
        app: net-debug-nonhost
    spec:
      containers:
      - name: net-debug-nonhost
        image: l7mp/net-debug
